--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,7 +72,7 @@ header .icons .fa-search {
 .player video {
   width: 100%;
   height: 100%;
-  max-width: 1000px;
+  max-width: 700px;
 }
 
 /* Vedio Info*/
@@ -95,18 +95,26 @@ body > .infoAndUpnext > .info {
 }
 
 .info .metadata .titleAndButton .title {
-  font-size: var(--font-medium);
+  /* font-size: var(--font-medium); */
+  margin-right: var(--padding);
+  padding-bottom: var(--padding);
+}
+
+.info .metadata .titleAndButton .title.clamp {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
   overflow: hidden;
-  margin-right: var(--padding);
-  padding-bottom: var(--padding);
 }
 
 .info .metadata .titleAndButton .moreBtn {
   height: 100%;
   background-color: var(--white-color);
+  transition: transform 300ms ease-in-out;
+}
+
+.info .metadata .titleAndButton .moreBtn.clicked {
+  transform: rotate(180deg);
 }
 
 .info .views {
@@ -114,6 +122,7 @@ body > .infoAndUpnext > .info {
   color: var(--gray-dark-color);
 }
 
+/* Action buttons */
 .actions {
   display: flex;
   justify-content: space-around;
@@ -243,5 +252,13 @@ body > .infoAndUpnext > .info {
 @media screen and (min-width: 768px) {
   .infoAndUpnext {
     flex-direction: row;
+    display: flex;
+  }
+  .infoAndUpnext > .info {
+    flex: 1;
+  }
+
+  .infoAndUpnext > .upNext {
+    flex: 1;
   }
 }
